Correct typo and add some cruft.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,16 @@
 		<title>A very Gray blog</title>
 	</head>
 	<body>
-		<h1>Under constructions</h1>
+		<h1>Under construction</h1>
 		<h2>Yup... you've seen that phrase before!</h2>
+		<p>
+			<pre>
+				//TODO:
+				1. make nicer template
+				2. write actual interesting content
+				3. ??????
+				4. win
+			</pre>
+		</p>
 	</body>
 </html>
