Add some little nothings

--- a/index.html
+++ b/index.html
@@ -3,8 +3,22 @@
 		<title>A very Gray blog</title>
 	</head>
 	<body>
-		<h1>Under construction</h1>
-		<h2>Yup... you've seen that phrase before!</h2>
+		<div class="header">
+			<span class="main-title">A page of Gray things</span>
+			Things to see:
+			<div class="link">
+				<a href='cv/'> $ whoami </a>
+				<span class="link-descr">Stuff about the site owner</span>
+			</div>
+			<div class="link">
+				<a href='koans/'> $ koans </a>
+				<span class="link-descr">Los koans de Master Foo!! (en español)</span>
+			</div>
+			<div class="forever">
+				========================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================
+			</div>
+		</div>
+		<h1>Remember, you're an idiot!</h1>
 		<p>
 			<pre>
 				//TODO:
