--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
 		<title>A very Gray blog</title>
+		<link rel="stylesheet" href="css/style.css" />
 	</head>
 	<body>
 		<div class="header">
