--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 			<span class="main-title">A page of Gray things</span>
 			Things to see:
 			<div class="link">
-				<a href='cv/'> $ whoami </a>
+				<a href='cv/'> $ whoami </a><br/>
 				<span class="link-descr">Stuff about the site owner</span>
 			</div>
 			<div class="link">
-				<a href='koans/'> $ koans </a>
+				<a href='koans/'> $ koans </a><br/>
 				<span class="link-descr">Los koans de Master Foo!! (en español)</span>
 			</div>
 			<div class="forever">
